Add responsive styles for container in index.html

--- a/index.html
+++ b/index.html
@@ -55,6 +55,12 @@
                 margin-right: auto;
             }
         }
+        @media (max-width: 640px) {
+            .container {
+                border: none;
+                width: 100%;
+            }
+        }
     </style>
 </head>
 
