--- a/index.html
+++ b/index.html
@@ -72,11 +72,11 @@
     <div class="relative z-10 flex items-center justify-center h-screen">
         <div
             class="container
-    w-[100%] sm:w-[80%]
+    w-[100%] sm:w-[80%] rounded-none
     md:h-[40%] md:min-h-[570px] md:max-h-[570px]
     lg:h-[60%] lg:max-h-[600px]
     xl:h-[70%] xl:max-h-[400px]  
-    md:w-[80%] lg:w-[80%] flex max-w-4xl flex-col md:flex-row justify-start p-5 rounded-3xl bg-black text-white">
+    md:w-[80%] lg:w-[80%] flex max-w-4xl sm:rounded-3xl md:rounded-3xl xl:rounded-3xl lg:rounded-3xl flex-col md:flex-row justify-start p-5 rounded-3xl bg-black text-white">
 
 
             <img class="fotoTengah lg:w-[22em] sm:w-[20em] md:w-[21em] opacity-80 h-auto" src="abys.jpg">
